<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="180dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseform_ger"
            android:textColor="@color/text"
            android:textSize="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_primaryProthesis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="@string/primärprothese"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/button_followUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="@string/nachkontrolle"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/button_revision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle"
            android:text="@string/revision"
            android:textColor="@color/white"
            android:textSize="20dp"/>
    </LinearLayout>

</LinearLayout>