<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8">


        <ImageView
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="1">

            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/engButton"
                android:layout_gravity="right"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:stateListAnimator="@null"
                android:text="@string/start_eng"
                android:textSize="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/language_ger"
                android:textColor="@color/text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/language_eng"
                android:textColor="@color/text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/deButton"
                android:layout_gravity="right"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:stateListAnimator="@null"
                android:text="@string/start_ger"
                android:textSize="15dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>